# librust-prosody-util-stanza

./: Cargo.toml  README.md
src/: attr.rs  fake_xpath.rs  lib.rs  lua.rs  lua_convert.rs  lua_serialize_compat.rs  path.rs  stanza.rs  tree.rs  validation.rs  xml.rs  xmpp.rs
src/stanza/: attrstr.rs  fake_xpath.rs  lua.rs  mod.rs  path.rs  stanza.rs  tree.rs  xml.rs  xmpp.rs
src/stream/: lua.rs  stream.rs
src/xmppstream/: lua.rs  mod.rs  stream.rs
util/: stanza.lua  xmppstream.lua
