[package]
name = "prosody-stanza"
version = "0.1.0"
authors = ["Jonas Schäfer <j.wielicki@sotecware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stanza"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.6.0-beta.1", features = ["vendored", "module"] }
bstr = { version = "0.2" }

[patch.crates-io]
mlua = { path = "/home/horazont/Projects/rust/mlua" }

[features]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
